# rwkv-tts-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_en.md  build.ps1  build.rs  build.sh  optimization_analysis_report.md  setup_onnx.bat  setup_onnx.ps1
.github/workflows/: ci.yml
.trae/documents/: Python与Rust音频特征提取对比分析.md  RWKV_TTS_Performance_Optimization_Plan.md  inference_optimization_technical_architecture.md  llm_inference_optimization_plan.md  zero_shot_redesign_prd.md  zero_shot_redesign_technical_architecture.md
.trae/rules/: project_rules.md
assets/model/: download_instructions.txt  file-md5.py
assets/model1/: .gitignore
assets/raf/: voice_20250916_121600_98c0687a.raf.json  voice_20250916_131005_1b8dd3b5.raf.json  voice_20250917_145617_01a1d3e7.raf.json  voice_20250917_150114_4103e64d.raf.json  voice_20251014_130750_05d8f5ed.raf.json  voice_20251014_132429_d897f5e1.raf.json  voices_metadata.json
benches/: sampling_benchmark.rs
crates/tts/: Cargo.toml
crates/tts/src/: ref_audio_utilities.rs
examples/: benchmark_analysis.rs  fast_path_test.rs  fix_checksum.rs  performance_test.rs  test_voice_cache.rs
python/: README.md  check_chinese.py  convert_rwkv_vocab_to_json.py  convert_sparktts_tokens_fixed.py  convert_sparktts_tokens_to_json.py  fix_sparktts_vocab.py  hf_rwkv_tokenizer.py  rebuild_tokenizer.py  rebuild_tokenizer_formatted.py  ref_audio_utilities.py  requirements.txt  rwkv_vocab_v20230424_sparktts_spct_tokens.json  test_decode.py  tts_cli.py  validate_tokenizer.py  verify_json.py  verify_tokenizer.py  vocab.txt
raf/: voice_20241218_123456_test001.raf.json  voice_20241218_123456_test002.raf.json  voices_metadata.json
src/: batch_tts_manager.rs  batch_types.rs  dynamic_batch_manager.rs  fast_sampler.rs  feature_extractor.rs  global_sampler_manager.rs  inference_state_manager.rs  lib.rs  lightweight_tts_pipeline.rs  logits_cache.rs  main.rs  normal_mode_inference.rs  onnx_session_pool.rs  performance_monitor.rs  properties_util.rs  ref_audio_utilities.rs  rwkv_sampler.rs  sampler_manager.rs  shared_runtime.rs  streaming_inference.rs  tts_pipeline.rs  tts_pipeline_fixes.rs  tts_state_manager.rs  vec_pool.rs  voice_feature.rs  voice_feature_manager.rs  zero_shot_inference.rs
static/: index.html
test/: female_seed42.json  verify_parameter_order.rs
参考/: Python与Rust版本classify_pitch函数对比报告.md  Python与Rust版本pitch分类详细对比报告.md  Python与Rust采样器对比分析.md  Rust采样器Python逻辑实现完成报告.md  pitch分类对比报告.md  属性token排序修复记录.md  第一个logit修复记录.md
参考/ai00_server/: Cargo.toml
参考/ai00_server/crates/ai00-server/src/: config.rs  main.rs
参考/ai00_server/crates/ai00-server/src/api/oai/: mod.rs
参考/python/: special_tokens_map.json  tokenizer_config.json
