[package]
name = "rwkv-tts-rs"
version = "0.2.4"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = "4.0"
ndarray = "0.15.6"
ort = { version = "2.0.0-rc.10", features = ["load-dynamic"] }
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "wav"] }
mp3lame-encoder = "0.1.5"
memmap2 = "0.9"
half = "2.4"
wgpu = "26.0"
safetensors = "0.6"
web-rwkv = "0.10.16"
serde_json = "1.0.144"
cbor4ii = { version = "1.0.0", features = ["serde1"] }
rand = "0.8"
regex = "1.0"
sha2 = "0.10"
# Salvo web framework dependencies
salvo = { version = "0.84.0", features = ["serve-static", "cors", "compression"] }
serde = { version = "1.0.221", features = ["derive"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
lazy_static = "1.4"
async-trait = "0.1"
flume = "0.11"
# 添加mime crate用于文件上传支持
mime = "0.3"
# Hugging Face Hub client for model downloading
hf-hub = "0.4.3"
tokio-util = { version = "0.7", features = ["io"] }
# Embed static files into binary
rust-embed = "8.0"
# Binary serialization for voice features
bincode = { version = "2.0.1", features = ["serde"] }
# UUID generation for voice IDs
uuid = { version = "1.0", features = ["v4"] }
# Date and time handling
chrono = { version = "0.4", features = ["serde"] }
# 高性能采样器依赖
once_cell = "1.19.0"
parking_lot = "0.12.1"
# 高质量重采样库
rubato = "0.15.0"

 

[[bin]]
name = "rwkvtts_server"
path = "bin/server.rs"



[dev-dependencies]
tempfile = "3.22.0"
criterion = { version = "0.5", features = ["html_reports"] }
rand_chacha = "0.3"

# Release profile optimizations for maximum performance
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3
codegen-units = 1

# Optimize key dependencies for better performance
[profile.release.package.web-rwkv]
opt-level = 3

[profile.release.package.ort]
opt-level = 3

 